<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Learn 6502 Assembly</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">help</string>
	<string name="menu_file">file</string>
	<string name="menu_save">save</string>
	<string name="menu_open">open</string>
    <string name="buttonAssemble">Assemble</string>
    <string name="buttonRun">Run</string>
    <string name="buttonReset">Reset</string>
    <string name="buttonHexdump">Hexdump</string>
    <string name="buttonDisassemble">Disassemble</string>
    <string name="buttonNotes">Notes</string>
    <string name="codeArea">Enter your code here</string>
    <string name="checkBoxDebug">Debug</string>
    <string name="buttonStep">Step</string>

</resources>
